mychatappv4/src/main/java/com/example/mychatappv4/errors/DuplicateEmailException.java
package com.example.mychatappv4.errors;

public class DuplicateEmailException extends RuntimeException {
    public DuplicateEmailException(String message) {
        super(message);
    }
}
